Remove usage of IndexSearcher#search(Query, Collector) from join package
For global ordinal-based join, we can support concurrent search. For
others, we fail if we're called from a multithreaded searcher.